create scaffolding, moving nav

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
 	<script src="bundle.js" defer></script>
 	<title>boiled eggs</title>
 </head>
