--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
+	<link rel="stylesheet" href="transition.css"/>
 	<script src="bundle.js" defer></script>
 	<title>boiled eggs</title>
 </head>
