--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<script src="bundle.js" defer></script>
-	<title>boiled eggs</title>
+	<title>Kskido</title>
 </head>
 <body>
 	<div id="app"></div>
