--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<script src="bundle.js" defer></script>
 	<title>Kskido</title>
 </head>
